# pidgin

./: .hgtags  ChangeLog  FUZZING  INSTALL  Makefile.am  Makefile.mingw  README  README.md  config.h.mingw  configure.ac  meson.build  meson_options.txt  pidgin.apspec.in  pidgin.spec.in
doc/: finch.1.in  pidgin.1.in
docs/: DEVELOPING.md  IRC.md
finch/: finch.c  gntnotify.c  meson.build
finch/plugins/: meson.build
libpurple/: ARCHITECTURE.md  Makefile.am  account.c  account.h  buddyicon.c  connhealth.c  connhealth.h  core.c  dbus-codegen.py  dbus-server.c  dnsquery.c  gaim-compat.h  gen-client-bindings-h.py  log.c  mediamanager.c  meson.build  msgqueue.c  msgqueue.h  network.c  plugin.c  plugin.h  protocols.c  protocols.h  proxy.c  prpl.c  purple-client.c  purple.h.in  purple.service.in  ratelimit.c  ratelimit.h  reconnect.c  reconnect.h  server.c  util.c
libpurple/ciphers/: meson.build
libpurple/plugins/: dbus-example.c  log_reader.c  meson.build  psychic.c
libpurple/plugins/mono/: meson.build
libpurple/plugins/mono/api/: meson.build
libpurple/plugins/mono/loader/: meson.build
libpurple/plugins/perl/: build-perl-module.sh  meson.build
libpurple/plugins/perl/common/: Makefile.PL
libpurple/plugins/tcl/: meson.build
libpurple/protocols/: Makefile.am  Makefile.mingw  meson.build
libpurple/protocols/acp/: acp.c  acp.h  acp_render.c  acp_rpc.c  acp_stream.c  acp_syntax.c  meson.build
libpurple/protocols/bonjour/: meson.build
libpurple/protocols/irc/: cmds.c  irc.c  irc.h  meson.build  msgs.c  parse.c
libpurple/protocols/irc/tests/: test_irc_tags.c
libpurple/protocols/jabber/: adhoccommands.c  auth_cyrus.c  buddy.c  meson.build  parser.c  xdata.c
libpurple/protocols/jabber/jingle/: content.c  iceudp.c  rawudp.c  session.c  transport.c
libpurple/protocols/null/: meson.build
libpurple/protocols/simple/: meson.build
libpurple/tests/: test_account_setting.c  test_buddyicon.c  test_cipher.c  test_connhealth.c  test_jabber_jutil.c  test_jabber_scram.c  test_msgqueue.c  test_ratelimit.c  test_reconnect.c  test_util.c  test_xmlnode.c  tests.h
libpurple/win32/: global.mak
pidgin/: gtkaccount.c  gtkblist-theme-loader.c  gtkblist-theme.c  gtkblist.c  gtkblist.h  gtkcellrendererexpander.c  gtkcertmgr.c  gtkconv.c  gtkconv.h  gtkconvwin.h  gtkdebug.c  gtkdialogs.c  gtkdialogs.h  gtkdnd-hints.c  gtkdocklet-gtk.c  gtkdocklet.c  gtkdocklet.h  gtkft.c  gtkimhtml.c  gtkimhtmltoolbar.c  gtkimhtmltoolbar.h  gtkitemfactory.c  gtkitemfactory.h  gtklog.c  gtkmain.c  gtkmedia.c  gtkmenutray.c  gtkmenutray.h  gtknotify.c  gtkplugin.c  gtkpluginpref.c  gtkpounce.c  gtkprefs.c  gtkprivacy.c  gtkrequest.c  gtkroomlist.c  gtksavedstatuses.c  gtkscrollbook.c  gtksmiley.c  gtksourceundomanager.c  (+15 more)
pidgin/data/: meson.build  pidgin.appdata.xml.in  pidgin.desktop.in.in
pidgin/pixmaps/: Makefile.am  meson.build
pidgin/plugins/: autoreply.c  convcolors.c  focusmode.c  highlight.c  lastseen.c  markerline.c  meson.build  messagesplitter.c  pidginrc.c  quickreplies.c  sedreplace.c  sendlater.c  spellchk.c  timestamp.c  timestamp_format.c  translate.c  transparency.c  vvconfig.c  xmppconsole.c
pidgin/plugins/cap/: cap.c  cap.h  meson.build
pidgin/plugins/disco/: gtkdisco.c  meson.build  xmppdisco.c
pidgin/plugins/gestures/: meson.build  stroke-draw.c
pidgin/plugins/gevolution/: meson.build
pidgin/plugins/musicmessaging/: meson.build  musicmessaging.c
pidgin/plugins/perl/common/: Makefile.PL
pidgin/plugins/ticker/: gtkticker.c  meson.build  ticker.c
pidgin/tests/: test_pixbuf_guard.c
pidgin/win32/nsis/: pidgin-installer.nsi
po/: POTFILES.in  meson.build
share/: meson.build
tools/: gtk3-migrate.py  gtk3-migrate2.py
